fix: bottom item corner overlap

--- a/es-ds-styles/scss/_es-dropdown.scss
+++ b/es-ds-styles/scss/_es-dropdown.scss
@@ -84,6 +84,7 @@
   box-shadow: none;
   padding: 0;
   margin-top: 0;
+  overflow: hidden;
 }
 
 .es-dropdown-wrapper {
@@ -135,6 +136,16 @@
     background-color: transparent;
     cursor: not-allowed;
     pointer-events: none;
+  }
+
+  &:first-child {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  &:last-child {
+    border-bottom-left-radius: variables.$border-radius-sm;
+    border-bottom-right-radius: variables.$border-radius-sm;
   }
 
   .dropdown-option-content {
